--- a/app/assets/stylesheets/customer/style.scss
+++ b/app/assets/stylesheets/customer/style.scss
@@ -737,6 +737,34 @@ p.lead{
     }
   }
 }
+.rating_box{
+  width: 100%;
+  min-height: 300px;
+  background-color: #ffffff;
+  box-shadow: 0px 0px 2px 1px rgba(0,0,0,0.2);
+  -webkit-box-shadow: 0px 0px 2px 1px rgba(0,0,0,0.2);
+  -moz-box-shadow: 0px 0px 2px 1px rgba(0,0,0,0.2);
+  -o-box-shadow: 0px 0px 2px 1px rgba(0,0,0,0.2);
+  h2{
+    font-size: 20px;
+    color: #000000;
+    margin: 0;
+    font-weight: normal;
+    padding: 10px 15px;
+    border-bottom: 1px solid #CCCCCC;
+  }
+  .new_rating{
+    margin: 20px 0;
+    .text-area{
+      width: 100%;
+      height: 35px;
+      border: 1px solid #eeeeee;
+    }
+    .submit-btn{
+      margin-top: 20px;
+    }
+  }
+}
 @media(max-width: 767px){
   .otp-min-height{
     min-height: inherit;
