--- a/app/assets/stylesheets/customer/style.scss
+++ b/app/assets/stylesheets/customer/style.scss
@@ -755,9 +755,18 @@ p.lead{
   }
   .new_rating{
     margin: 20px 0;
-    .text-area{
+    .text-field{
       width: 100%;
       height: 35px;
+      margin-bottom: 10px;
+      border: 1px solid #eeeeee;
+    }
+    label{
+      font-size: 12px;
+      font-weight: bold;
+    }
+    .text-area{
+      width: 100%;
       border: 1px solid #eeeeee;
     }
     .submit-btn{
