--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -208,181 +208,181 @@
         $('[data-toggle="popover"]').tooltip();
     });
 </script>
-<!--<div class="container">-->
-  <!--<div class="tabbable product-tabs">-->
-    <!--<ul class="nav nav-tabs" id="myTab">-->
-      <!--<li class="active"><a href="#tab-1" data-toggle="tab">Description</a>-->
-      <!--</li>-->
-      <!--<li><a href="#tab-2" data-toggle="tab">Additional Information</a>-->
-      <!--</li>-->
-      <!--<li><a href="#tab-3" data-toggle="tab">Rating and Reviews</a>-->
-      <!--</li>-->
-    <!--</ul>-->
-    <!--<div class="tab-content">-->
-      <!--<div class="tab-pane fade in active" id="tab-1">-->
-        <!--<p>Imperdiet fusce viverra mollis taciti lectus scelerisque augue quisque felis posuere nulla facilisis scelerisque pharetra quisque dignissim elit diam nisi penatibus magnis dapibus pretium lacinia torquent convallis egestas posuere-->
-          <!--etiam</p>-->
-        <!--<p>Aliquam posuere duis a fringilla enim dictum tortor accumsan litora</p>-->
-      <!--</div>-->
-      <!--<div class="tab-pane fade" id="tab-2">-->
-        <!--<table class="table">-->
-          <!--<tbody>-->
-          <!--<tr>-->
-            <!--<td>Weight:</td>-->
-            <!--<td>0.3 kg</td>-->
-          <!--</tr>-->
-          <!--<tr>-->
-            <!--<td>Dimensions:</td>-->
-            <!--<td>20 ½" W x 12" H x 10 ¾" D with 9" strap drop and 52" removable, adjustable strap</td>-->
-          <!--</tr>-->
-          <!--<tr>-->
-            <!--<td>Materials :</td>-->
-            <!--<td>100% Cotton</td>-->
-          <!--</tr>-->
-          <!--<tr>-->
-            <!--<td>Care Tips:</td>-->
-            <!--<td>Machine wash cold, gentle cycle, only non-chlorine bleach when needed; line dry</td>-->
-          <!--</tr>-->
-          <!--</tbody>-->
-        <!--</table>-->
-      <!--</div>-->
-      <!--<div class="tab-pane fade" id="tab-3">-->
-        <!--<div class="row">-->
-          <!--<div class="col-md-8">-->
-            <!--<article class="product-review">-->
-              <!--<div class="product-review-author">-->
-                <!--<%#= image_tag 'theme_img/70x70.png', alt: '' %>-->
-              <!--</div>-->
-              <!--<div class="product-review-content-full">-->
-                <!--<h5 class="product-review-title">Terrific Buy!</h5>-->
-                <!--<ul class="product-page-product-rating">-->
-                  <!--<li class="rated"><i class="fa fa-star"></i>-->
-                  <!--</li>-->
-                  <!--<li class="rated"><i class="fa fa-star"></i>-->
-                  <!--</li>-->
-                  <!--<li class="rated"><i class="fa fa-star"></i>-->
-                  <!--</li>-->
-                  <!--<li class="rated"><i class="fa fa-star"></i>-->
-                  <!--</li>-->
-                  <!--<li class="rated"><i class="fa fa-star"></i>-->
-                  <!--</li>-->
-                <!--</ul>-->
-                <!--<p class="product-review-meta">by Alison Mackenzie on 08/14/2015</p>-->
-                <!--<p class="product-review-body">Aliquam nam gravida hendrerit primis class egestas primis porta egestas non eleifend risus turpis commodo nisi felis nullam risus aliquam curae fusce elit est ornare</p>-->
-                <!--<p class="text-success"><strong><i class="fa fa-check"></i> I would recommend this to a friend!</strong>-->
-                <!--</p>-->
-                <!--<ul class="list-inline product-review-actions">-->
-                  <!--<li><a href="#"><i class="fa fa-flag"></i> Flag this review</a>-->
-                  <!--</li>-->
-                  <!--<li><a href="#"><i class="fa fa-comment"></i> Comment review</a>-->
-                  <!--</li>-->
-                <!--</ul>-->
-              <!--</div>-->
-            <!--</article>-->
-            <!--<article class="product-review">-->
-              <!--<div class="product-review-author">-->
-                <!--<%#= image_tag 'theme_img/70x70.png', alt: '' %>-->
-              <!--</div>-->
-              <!--<div class="product-review-content-full">-->
-                <!--<h5 class="product-review-title">Too Big. Unusable.</h5>-->
-                <!--<ul class="product-page-product-rating">-->
-                  <!--<li class="rated"><i class="fa fa-star"></i>-->
-                  <!--</li>-->
-                  <!--<li class="rated"><i class="fa fa-star"></i>-->
-                  <!--</li>-->
-                  <!--<li><i class="fa fa-star"></i>-->
-                  <!--</li>-->
-                  <!--<li><i class="fa fa-star"></i>-->
-                  <!--</li>-->
-                  <!--<li><i class="fa fa-star"></i>-->
-                  <!--</li>-->
-                <!--</ul>-->
-                <!--<p class="product-review-meta">by Keith Churchill on 08/14/2015</p>-->
-                <!--<p class="product-review-body">Lacus molestie aptent elementum nascetur a blandit aenean fusce eleifend hendrerit ac fringilla vehicula eget odio orci hac mauris tincidunt tellus</p>-->
-                <!--<p class="text-danger"><strong><i class="fa fa-close"></i> No, I would not recommend this to a friend.</strong>-->
-                <!--</p>-->
-                <!--<ul class="list-inline product-review-actions">-->
-                  <!--<li><a href="#"><i class="fa fa-flag"></i> Flag this review</a>-->
-                  <!--</li>-->
-                  <!--<li><a href="#"><i class="fa fa-comment"></i> Comment review</a>-->
-                  <!--</li>-->
-                <!--</ul>-->
-              <!--</div>-->
-            <!--</article>-->
-            <!--<article class="product-review">-->
-              <!--<div class="product-review-author">-->
-                <!--<%#= image_tag 'theme_img/70x70.png', alt: '' %>-->
-              <!--</div>-->
-              <!--<div class="product-review-content-full">-->
-                <!--<h5 class="product-review-title">Worth it</h5>-->
-                <!--<ul class="product-page-product-rating">-->
-                  <!--<li class="rated"><i class="fa fa-star"></i>-->
-                  <!--</li>-->
-                  <!--<li class="rated"><i class="fa fa-star"></i>-->
-                  <!--</li>-->
-                  <!--<li class="rated"><i class="fa fa-star"></i>-->
-                  <!--</li>-->
-                  <!--<li class="rated"><i class="fa fa-star"></i>-->
-                  <!--</li>-->
-                  <!--<li class="rated"><i class="fa fa-star"></i>-->
-                  <!--</li>-->
-                <!--</ul>-->
-                <!--<p class="product-review-meta">by Alison Mackenzie on 08/14/2015</p>-->
-                <!--<p class="product-review-body">Imperdiet maecenas suspendisse diam lorem nisi quis elit augue mus interdum porttitor ante</p>-->
-                <!--<p class="text-success"><strong><i class="fa fa-check"></i> I would recommend this to a friend!</strong>-->
-                <!--</p>-->
-                <!--<ul class="list-inline product-review-actions">-->
-                  <!--<li><a href="#"><i class="fa fa-flag"></i> Flag this review</a>-->
-                  <!--</li>-->
-                  <!--<li><a href="#"><i class="fa fa-comment"></i> Comment review</a>-->
-                  <!--</li>-->
-                <!--</ul>-->
-              <!--</div>-->
-            <!--</article>-->
-          <!--</div>-->
-          <!--<div class="col-md-4">-->
-            <!--<h3 class="product-tab-rating-title">Overall Customer Rating:</h3>-->
-            <!--<ul class="product-page-product-rating product-rating-big">-->
-              <!--<li class="rated"><i class="fa fa-star"></i>-->
-              <!--</li>-->
-              <!--<li class="rated"><i class="fa fa-star"></i>-->
-              <!--</li>-->
-              <!--<li class="rated"><i class="fa fa-star"></i>-->
-              <!--</li>-->
-              <!--<li class="rated"><i class="fa fa-star"></i>-->
-              <!--</li>-->
-              <!--<li class="rated"><i class="fa fa-star"></i>-->
-              <!--</li>-->
-              <!--<li class="count">4.9</li>-->
-            <!--</ul><small>238 customer reviews</small>-->
-            <!--<p><strong>98%</strong> of reviewers would recommend this product</p>-->
-          <!--</div>-->
-        <!--</div>-->
-        <!--<div class="row">-->
-          <!--<div class="col-md-6">-->
-            <!--<p class="category-pagination-sign">238 customer reviews found. Showing 1 - 5</p>-->
-          <!--</div>-->
-          <!--<div class="col-md-6">-->
-            <!--<nav>-->
-              <!--<ul class="pagination category-pagination pull-right">-->
-                <!--<li class="active"><a href="#">1</a>-->
-                <!--</li>-->
-                <!--<li><a href="#">2</a>-->
-                <!--</li>-->
-                <!--<li><a href="#">3</a>-->
-                <!--</li>-->
-                <!--<li><a href="#">4</a>-->
-                <!--</li>-->
-                <!--<li><a href="#">5</a>-->
-                <!--</li>-->
-                <!--<li class="last"><a href="#"><i class="fa fa-long-arrow-right"></i></a>-->
-                <!--</li>-->
-              <!--</ul>-->
-            <!--</nav>-->
-          <!--</div>-->
-        <!--</div>-->
-      <!--</div>-->
-    <!--</div>-->
-  <!--</div>-->
-<!--</div>-->
-<!--<div class="gap"></div>-->
+<div class="container">
+  <div class="tabbable product-tabs">
+    <ul class="nav nav-tabs" id="myTab">
+      <li class="active"><a href="#tab-1" data-toggle="tab">Description</a>
+      </li>
+      <li><a href="#tab-2" data-toggle="tab">Additional Information</a>
+      </li>
+      <li><a href="#tab-3" data-toggle="tab">Rating and Reviews</a>
+      </li>
+    </ul>
+    <div class="tab-content">
+      <div class="tab-pane fade in active" id="tab-1">
+        <p>Imperdiet fusce viverra mollis taciti lectus scelerisque augue quisque felis posuere nulla facilisis scelerisque pharetra quisque dignissim elit diam nisi penatibus magnis dapibus pretium lacinia torquent convallis egestas posuere
+          etiam</p>
+        <p>Aliquam posuere duis a fringilla enim dictum tortor accumsan litora</p>
+      </div>
+      <div class="tab-pane fade" id="tab-2">
+        <table class="table">
+          <tbody>
+          <tr>
+            <td>Weight:</td>
+            <td>0.3 kg</td>
+          </tr>
+          <tr>
+            <td>Dimensions:</td>
+            <td>20 ½" W x 12" H x 10 ¾" D with 9" strap drop and 52" removable, adjustable strap</td>
+          </tr>
+          <tr>
+            <td>Materials :</td>
+            <td>100% Cotton</td>
+          </tr>
+          <tr>
+            <td>Care Tips:</td>
+            <td>Machine wash cold, gentle cycle, only non-chlorine bleach when needed; line dry</td>
+          </tr>
+          </tbody>
+        </table>
+      </div>
+      <div class="tab-pane fade" id="tab-3">
+        <div class="row">
+          <div class="col-md-8">
+            <article class="product-review">
+              <div class="product-review-author">
+                <%#= image_tag 'theme_img/70x70.png', alt: '' %>
+              </div>
+              <div class="product-review-content-full">
+                <h5 class="product-review-title">Terrific Buy!</h5>
+                <ul class="product-page-product-rating">
+                  <li class="rated"><i class="fa fa-star"></i>
+                  </li>
+                  <li class="rated"><i class="fa fa-star"></i>
+                  </li>
+                  <li class="rated"><i class="fa fa-star"></i>
+                  </li>
+                  <li class="rated"><i class="fa fa-star"></i>
+                  </li>
+                  <li class="rated"><i class="fa fa-star"></i>
+                  </li>
+                </ul>
+                <p class="product-review-meta">by Alison Mackenzie on 08/14/2015</p>
+                <p class="product-review-body">Aliquam nam gravida hendrerit primis class egestas primis porta egestas non eleifend risus turpis commodo nisi felis nullam risus aliquam curae fusce elit est ornare</p>
+                <p class="text-success"><strong><i class="fa fa-check"></i> I would recommend this to a friend!</strong>
+                </p>
+                <ul class="list-inline product-review-actions">
+                  <li><a href="#"><i class="fa fa-flag"></i> Flag this review</a>
+                  </li>
+                  <li><a href="#"><i class="fa fa-comment"></i> Comment review</a>
+                  </li>
+                </ul>
+              </div>
+            </article>
+            <article class="product-review">
+              <div class="product-review-author">
+                <%#= image_tag 'theme_img/70x70.png', alt: '' %>
+              </div>
+              <div class="product-review-content-full">
+                <h5 class="product-review-title">Too Big. Unusable.</h5>
+                <ul class="product-page-product-rating">
+                  <li class="rated"><i class="fa fa-star"></i>
+                  </li>
+                  <li class="rated"><i class="fa fa-star"></i>
+                  </li>
+                  <li><i class="fa fa-star"></i>
+                  </li>
+                  <li><i class="fa fa-star"></i>
+                  </li>
+                  <li><i class="fa fa-star"></i>
+                  </li>
+                </ul>
+                <p class="product-review-meta">by Keith Churchill on 08/14/2015</p>
+                <p class="product-review-body">Lacus molestie aptent elementum nascetur a blandit aenean fusce eleifend hendrerit ac fringilla vehicula eget odio orci hac mauris tincidunt tellus</p>
+                <p class="text-danger"><strong><i class="fa fa-close"></i> No, I would not recommend this to a friend.</strong>
+                </p>
+                <ul class="list-inline product-review-actions">
+                  <li><a href="#"><i class="fa fa-flag"></i> Flag this review</a>
+                  </li>
+                  <li><a href="#"><i class="fa fa-comment"></i> Comment review</a>
+                  </li>
+                </ul>
+              </div>
+            </article>
+            <article class="product-review">
+              <div class="product-review-author">
+                <%#= image_tag 'theme_img/70x70.png', alt: '' %>
+              </div>
+              <div class="product-review-content-full">
+                <h5 class="product-review-title">Worth it</h5>
+                <ul class="product-page-product-rating">
+                  <li class="rated"><i class="fa fa-star"></i>
+                  </li>
+                  <li class="rated"><i class="fa fa-star"></i>
+                  </li>
+                  <li class="rated"><i class="fa fa-star"></i>
+                  </li>
+                  <li class="rated"><i class="fa fa-star"></i>
+                  </li>
+                  <li class="rated"><i class="fa fa-star"></i>
+                  </li>
+                </ul>
+                <p class="product-review-meta">by Alison Mackenzie on 08/14/2015</p>
+                <p class="product-review-body">Imperdiet maecenas suspendisse diam lorem nisi quis elit augue mus interdum porttitor ante</p>
+                <p class="text-success"><strong><i class="fa fa-check"></i> I would recommend this to a friend!</strong>
+                </p>
+                <ul class="list-inline product-review-actions">
+                  <li><a href="#"><i class="fa fa-flag"></i> Flag this review</a>
+                  </li>
+                  <li><a href="#"><i class="fa fa-comment"></i> Comment review</a>
+                  </li>
+                </ul>
+              </div>
+            </article>
+          </div>
+          <div class="col-md-4">
+            <h3 class="product-tab-rating-title">Overall Customer Rating:</h3>
+            <ul class="product-page-product-rating product-rating-big">
+              <li class="rated"><i class="fa fa-star"></i>
+              </li>
+              <li class="rated"><i class="fa fa-star"></i>
+              </li>
+              <li class="rated"><i class="fa fa-star"></i>
+              </li>
+              <li class="rated"><i class="fa fa-star"></i>
+              </li>
+              <li class="rated"><i class="fa fa-star"></i>
+              </li>
+              <li class="count">4.9</li>
+            </ul><small>238 customer reviews</small>
+            <p><strong>98%</strong> of reviewers would recommend this product</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6">
+            <p class="category-pagination-sign">238 customer reviews found. Showing 1 - 5</p>
+          </div>
+          <div class="col-md-6">
+            <nav>
+              <ul class="pagination category-pagination pull-right">
+                <li class="active"><a href="#">1</a>
+                </li>
+                <li><a href="#">2</a>
+                </li>
+                <li><a href="#">3</a>
+                </li>
+                <li><a href="#">4</a>
+                </li>
+                <li><a href="#">5</a>
+                </li>
+                <li class="last"><a href="#"><i class="fa fa-long-arrow-right"></i></a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="gap"></div>
