--- a/app/views/ratings/new.html.erb
+++ b/app/views/ratings/new.html.erb
@@ -10,6 +10,8 @@
               <%= f.hidden_field :rateable_id %>
               <%= f.hidden_field :rateable_type %>
               <%= f.hidden_field :user_id %>
+              <label for="">Title</label>
+              <%= f.text_field :title, class: 'text-field', placeholder: 'Title' %>
               <label for="">Feedback</label>
               <%= f.text_area :feedback, class: 'text-area', placeholder: 'Feedback' %>
               <label for="">Rating</label>
