--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -216,3 +216,118 @@
   </div>
 </div>
 <div class="gap"></div>
+
+<div class="container">
+  <div class="tabbable product-tabs">
+    <ul class="nav nav-tabs" id="myTab">
+      <li class="active"><a href="#tab-1" data-toggle="tab">Description</a>
+      </li>
+      <li><a href="#tab-2" data-toggle="tab">Additional Information</a>
+      </li>
+      <li><a href="#tab-3" data-toggle="tab">Rating and Reviews</a>
+      </li>
+    </ul>
+    <div class="tab-content">
+      <div class="tab-pane fade in active" id="tab-1">
+        <p>
+          <%= @service.service_description.present? ? @service.service_description : 'NA' %>
+        </p>
+      </div>
+      <div class="tab-pane fade" id="tab-2">
+        <table class="table">
+          <tbody>
+          <tr>
+            <td>Youtube Link:</td>
+            <td>
+              <%if @service.youtube_link.present? %>
+                  <a href="<%= @service.youtube_link %>" target="_blank">
+                    <%= @service.youtube_link %>
+                  </a>
+              <% else %>
+                  NA
+              <% end %>
+            </td>
+          </tr>
+          <tr>
+            <td>Other:</td>
+            <td><%= @service.other.present? ? @service.other : 'NA' %></td>
+          </tr>
+          </tbody>
+        </table>
+      </div>
+      <div class="tab-pane fade" id="tab-3">
+        <div class="row">
+          <div class="col-md-8">
+            <% @ratings.each do |rating| %>
+                <article class="product-review">
+                  <div class="product-review-content-full">
+                    <h5 class="product-review-title">
+                      <%= rating.title %>
+                    </h5>
+                    <ul class="product-page-product-rating">
+                      <% for i in 1..5 %>
+                          <% if i <= rating.number %>
+                              <li class="rated"><i class="fa fa-star"></i></li>
+                          <% else %>
+                              <li class=""><i class="fa fa-star"></i></li>
+                          <% end %>
+                      <% end %>
+                    </ul>
+                    <p class="product-review-meta">by <%= rating.user_id %> on <%= rating.created_at.strftime("%d/%m/%Y %I:%M %p") %></p>
+                    <p class="product-review-body"><%= rating.feedback %></p>
+                    <% if rating.recommand == true %>
+                        <p class="text-success"><strong><i class="fa fa-check"></i> I would recommend this to a friend!</strong>
+                    <% else %>
+                        <p class="text-danger"><strong><i class="fa fa-close"></i> No, I would not recommend this to a friend.</strong>
+                    <% end %>
+                    </p>
+                  </div>
+                </article>
+            <% end %>
+          </div>
+          <div class="col-md-4">
+            <h3 class="product-tab-rating-title">Overall Customer Rating:</h3>
+            <ul class="product-page-product-rating product-rating-big">
+              <li class="rated"><i class="fa fa-star"></i>
+              </li>
+              <li class="rated"><i class="fa fa-star"></i>
+              </li>
+              <li class="rated"><i class="fa fa-star"></i>
+              </li>
+              <li class="rated"><i class="fa fa-star"></i>
+              </li>
+              <li class="rated"><i class="fa fa-star"></i>
+              </li>
+              <li class="count">4.9</li>
+            </ul><small>238 customer reviews</small>
+            <p><strong>98%</strong> of reviewers would recommend this product</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6">
+            <p class="category-pagination-sign">238 customer reviews found. Showing 1 - 5</p>
+          </div>
+          <div class="col-md-6">
+            <nav>
+              <ul class="pagination category-pagination pull-right">
+                <li class="active"><a href="#">1</a>
+                </li>
+                <li><a href="#">2</a>
+                </li>
+                <li><a href="#">3</a>
+                </li>
+                <li><a href="#">4</a>
+                </li>
+                <li><a href="#">5</a>
+                </li>
+                <li class="last"><a href="#"><i class="fa fa-long-arrow-right"></i></a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="gap"></div>
