--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -266,11 +266,10 @@
                     <p class="product-review-meta">by <%= rating.user_name %> on <%= rating.created_at.strftime("%d/%m/%Y %I:%M %p") %></p>
                     <p class="product-review-body"><%= rating.feedback %></p>
                     <% if rating.recommand == true %>
-                        <p class="text-success"><strong><i class="fa fa-check"></i> I would recommend this to a friend!</strong>
+                        <p class="text-success"><strong><i class="fa fa-check"></i> I would recommend this to a friend!</strong></p>
                     <% else %>
-                        <p class="text-danger"><strong><i class="fa fa-close"></i> No, I would not recommend this to a friend.</strong>
+                        <p class="text-danger"><strong><i class="fa fa-close"></i> No, I would not recommend this to a friend.</strong></p>
                     <% end %>
-                    </p>
                   </div>
                 </article>
             <% end %>
